--- a/Clash/config/ACL4SSR_Online_Full_Google.ini
+++ b/Clash/config/ACL4SSR_Online_Full_Google.ini
@@ -18,6 +18,7 @@ ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanEasyList.list
 ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=🦻 Podcast,https://raw.githubusercontent.com/daveyuuuu/ACL4SSR/master/Clash/Ruleset/Podcast.list
+ruleset=🇺🇸 PayPal,https://raw.githubusercontent.com/daveyuuuu/ACL4SSR/master/Clash/Ruleset/Paypal.list
 ruleset=🎬 iQiyi,https://raw.githubusercontent.com/daveyuuuu/ACL4SSR/master/Clash/Ruleset/Iqiyi.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ruleset=📢 谷歌🇨🇳Play下载,[]DOMAIN-SUFFIX,xn--ngstr-lra8j.com
