--- a/Clash/config/ACL4SSR_ALL_In_One.ini
+++ b/Clash/config/ACL4SSR_ALL_In_One.ini
@@ -1,7 +1,7 @@
 [custom]
 
 
-ruleset=🎯 全球直连,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/refs/heads/release/applications.txt
+ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/Loyalsoldier/clash-rules/refs/heads/release/applications.txt,86400
 
 
 
