--- a/Clash/config/ACL4SSR_ALL_In_One.ini
+++ b/Clash/config/ACL4SSR_ALL_In_One.ini
@@ -1,11 +1,91 @@
 [custom]
+# 2025-02-02
+# create By dave yu Mainland white list mode
+
+# Reject List
+ruleset=🛑 广告拦截,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/reject.txt,86400
+
+# Acl4SSR
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/daveyuuuu/ACL4SSR/master/Clash/MyUnBan.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Download.list
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+
+ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Blizzard.list
+ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
+ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Origin.list
+ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Sony.list
+ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Steam.list
+ruleset=🎮 游戏平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Nintendo.list
+
+# Custom List
+ruleset=🧑🏻‍💻 Leetcode,https://raw.githubusercontent.com/daveyuuuu/ACL4SSR/master/Clash/Ruleset/Leetcode.list
+ruleset=🇺🇸 Paypal,https://raw.githubusercontent.com/daveyuuuu/ACL4SSR/master/Clash/Ruleset/PaypalUS.list
+ruleset=🦻 Podcast,https://raw.githubusercontent.com/daveyuuuu/ACL4SSR/master/Clash/Ruleset/Podcast.list
+
+# Direct List
+ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/applications.txt,86400
+ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/private.txt,86400
+ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/icloud.txt,86400
+ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/apple.txt,86400
+ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt,86400
+ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/lancidr.txt,86400
+ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/cncidr.txt,86400
+ruleset=🎯 全球直连,[]GEOIP,LAN
+ruleset=🎯 全球直连,[]GEOIP,CN
+
+# Proxy List
+ruleset=📢 谷歌,clash-classic:https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/google.txt,86400
+ruleset=📡 Proxy,clash-classic:https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/proxy.txt,86400
+ruleset=📲 电报消息,clash-classic:https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/telegramcidr.txt,86400
+
+ruleset=🌎 Freedom,[]FINAL
 
 
-ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/Loyalsoldier/clash-rules/refs/heads/release/applications.txt,86400
+;设置规则标志位
 
+;设置分组标志位
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港自动选择`[]🇭🇰 香港负载均衡`[]🇭🇰 香港故障转移`[]🇨🇳 台湾自动选择`[]🇨🇳 台湾负载均衡`[]🇨🇳 台湾故障转移`[]🇸🇬 狮城自动选择`[]🇸🇬 狮城负载均衡`[]🇸🇬 狮城故障转移`[]🇯🇵 日本自动选择`[]🇯🇵 日本负载均衡`[]🇯🇵 日本故障转移`[]🇺🇲 美国自动选择`[]🇺🇲 美国负载均衡`[]🇺🇲 美国故障转移`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择
+custom_proxy_group=🧑🏻‍💻 Leetcode`select`[]🚀 节点选择
+custom_proxy_group=🦻 Podcast`select`[]🚀 节点选择
+custom_proxy_group=🇺🇸 Paypal`select`[]🇺🇲 美国故障转移
+custom_proxy_group=📢 谷歌`select`[]🚀 节点选择
+custom_proxy_group=📡 Proxy`select`[]🚀 节点选择
+custom_proxy_group=📲 电报消息`select`[]🔮 负载均衡
+custom_proxy_group=🌎 Freedom`select`[]🚀 节点选择
 
-
+custom_proxy_group=🚀 手动切换`select`.*
 custom_proxy_group=🎯 全球直连`select`[]DIRECT
+custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔯 故障转移`fallback`.*`http://www.gstatic.com/generate_204`180
+custom_proxy_group=🔮 负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`180
+
+custom_proxy_group=🇭🇰 香港自动选择`url-test`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港负载均衡`load-balance`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`180
+custom_proxy_group=🇭🇰 香港故障转移`fallback`(港|HK|hk|Hong Kong|HongKong|hongkong)`http://www.gstatic.com/generate_204`180
+
+custom_proxy_group=🇯🇵 日本自动选择`url-test`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本负载均衡`load-balance`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`180
+custom_proxy_group=🇯🇵 日本故障转移`fallback`(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)`http://www.gstatic.com/generate_204`180
+
+custom_proxy_group=🇺🇲 美国自动选择`url-test`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇺🇲 美国负载均衡`load-balance`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`180
+custom_proxy_group=🇺🇲 美国故障转移`fallback`(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)`http://www.gstatic.com/generate_204`180
+
+custom_proxy_group=🇨🇳 台湾自动选择`url-test`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇨🇳 台湾负载均衡`load-balance`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`180
+custom_proxy_group=🇨🇳 台湾故障转移`fallback`(台|新北|彰化|TW|Taiwan)`http://www.gstatic.com/generate_204`180
+
+custom_proxy_group=🇸🇬 狮城自动选择`url-test`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城负载均衡`load-balance`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`180
+custom_proxy_group=🇸🇬 狮城故障转移`fallback`(新加坡|坡|狮城|SG|Singapore)`http://www.gstatic.com/generate_204`180
 
 enable_rule_generator=true
 overwrite_original_rules=true
+
+
+custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]DIRECT`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇸🇬 狮城节点`[]🇯🇵 日本节点`[]🇰🇷 韩国节点`[]🚀 手动切换
