--- a/Clash/config/ACL4SSR_ALL_In_One.ini
+++ b/Clash/config/ACL4SSR_ALL_In_One.ini
@@ -2,8 +2,10 @@
 # 2025-02-02
 # create By dave yu Mainland white list mode
 
+proxy_config=socks5://127.0.0.1:7897
+
 # Reject List
-ruleset=🛑 广告拦截,https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/reject.txt,86400
+ruleset=🛑 广告拦截,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/reject.txt,86400
 
 # Acl4SSR
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
@@ -26,20 +28,20 @@ ruleset=🇺🇸 Paypal,https://raw.githubusercontent.com/daveyuuuu/ACL4SSR/mast
 ruleset=🦻 Podcast,https://raw.githubusercontent.com/daveyuuuu/ACL4SSR/master/Clash/Ruleset/Podcast.list
 
 # Direct List
-ruleset=🎯 全球直连,clash-classic:https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/applications.txt,86400
-ruleset=🎯 全球直连,clash-classic:https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/private.txt,86400
-ruleset=🎯 全球直连,clash-classic:https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/icloud.txt,86400
-ruleset=🎯 全球直连,clash-classic:https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/apple.txt,86400
-ruleset=🎯 全球直连,clash-classic:https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/direct.txt,86400
-ruleset=🎯 全球直连,clash-classic:https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/lancidr.txt,86400
-ruleset=🎯 全球直连,clash-classic:https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/cncidr.txt,86400
+ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/applications.txt,86400
+ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/private.txt,86400
+ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/icloud.txt,86400
+ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/apple.txt,86400
+ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/direct.txt,86400
+ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/lancidr.txt,86400
+ruleset=🎯 全球直连,clash-classic:https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/cncidr.txt,86400
 ruleset=🎯 全球直连,[]GEOIP,LAN
 ruleset=🎯 全球直连,[]GEOIP,CN
 
 # Proxy List
-ruleset=📢 谷歌,clash-classic:https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/google.txt,86400
-ruleset=📡 Proxy,clash-classic:https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/proxy.txt,86400
-ruleset=📲 电报消息,clash-classic:https://cdn.jsdelivr.net/gh/Loyalsoldier/clash-rules@release/telegramcidr.txt,86400
+ruleset=📢 谷歌,clash-classic:https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/google.txt,86400
+ruleset=📡 Proxy,clash-classic:https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/proxy.txt,86400
+ruleset=📲 电报消息,clash-classic:https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/telegramcidr.txt,86400
 
 ruleset=🌎 Freedom,[]FINAL
 
