--- a/Clash/config/ACL4SSR_ALL_In_One.ini
+++ b/Clash/config/ACL4SSR_ALL_In_One.ini
@@ -2,7 +2,7 @@
 # 2025-02-02
 # create By dave yu Mainland white list mode
 
-proxy_config=socks5://127.0.0.1:7897
+proxy_config=http://127.0.0.1:7897
 
 # Reject List
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/reject.txt,86400
