--- a/Clash/config/ACL4SSR_ALL_In_One.ini
+++ b/Clash/config/ACL4SSR_ALL_In_One.ini
@@ -2,10 +2,8 @@
 # 2025-02-02
 # create By dave yu Mainland white list mode
 
-proxy_config=http://127.0.0.1:7897
-
 # Reject List
-ruleset=🛑 广告拦截,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/reject.txt,86400
+ruleset=🛑 广告拦截,clash-classic:https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/reject.txt,86400
 
 # Acl4SSR
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
