--- a/Clash/config/ACL4SSR_ALL_In_One.ini
+++ b/Clash/config/ACL4SSR_ALL_In_One.ini
@@ -50,7 +50,7 @@ ruleset=🌎 Freedom,[]FINAL
 ;设置规则标志位
 
 ;设置分组标志位
-custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港自动选择`[]🇭🇰 香港负载均衡`[]🇭🇰 香港故障转移`[]🇨🇳 台湾自动选择`[]🇨🇳 台湾负载均衡`[]🇨🇳 台湾故障转移`[]🇸🇬 狮城自动选择`[]🇸🇬 狮城负载均衡`[]🇸🇬 狮城故障转移`[]🇯🇵 日本自动选择`[]🇯🇵 日本负载均衡`[]🇯🇵 日本故障转移`[]🇺🇲 美国自动选择`[]🇺🇲 美国负载均衡`[]🇺🇲 美国故障转移`[]🚀 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]🇭🇰 香港负载均衡`[]🇭🇰 香港自动选择`[]🇭🇰 香港故障转移`[]🇨🇳 台湾自动选择`[]🇨🇳 台湾负载均衡`[]🇨🇳 台湾故障转移`[]🇸🇬 狮城自动选择`[]🇸🇬 狮城负载均衡`[]🇸🇬 狮城故障转移`[]🇯🇵 日本自动选择`[]🇯🇵 日本负载均衡`[]🇯🇵 日本故障转移`[]🇺🇲 美国自动选择`[]🇺🇲 美国负载均衡`[]🇺🇲 美国故障转移`[]🚀 手动切换`[]DIRECT
 custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择
 custom_proxy_group=🧑🏻‍💻 Leetcode`select`[]🚀 节点选择
 custom_proxy_group=🦻 Podcast`select`[]🚀 节点选择
