--- a/Clash/Providers/MyUnBan.yaml
+++ b/Clash/Providers/MyUnBan.yaml
@@ -4,4 +4,4 @@ payload:
   - DOMAIN-SUFFIX,name.com
   - DOMAIN-SUFFIX,name.tools
   - DOMAIN-SUFFIX,omnigroup.com
-  - mb.bochk.com
+  - DOMAIN-SUFFIX,mb.bochk.com
